[package]
name = "garminfit"
version = "0.1.0"
description = "Garmin FIT binary file reading"
authors = ["Jordan Mackie <jmackie@protonmail.com>"]
keywords = ["garmin", "fit", "cycling", "power"]

[dependencies]
byteorder = "1"
chrono = "0.4"
clap = "2.32"
failure = "0.1.2"

[workspace]
members = ["profile-gen"]
