[package]
name = "garminfit"
version = "0.1.0"
description = "Garmin FIT binary file reading"
documentation = "https://docs.rs/garminfit"
homepage = "https://github.com/jmackie/garminfit"
repository = "https://github.com/jmackie/garminfit"
license = "MIT"
readme = "README.md"
authors = ["Jordan Mackie <jmackie@protonmail.com>"]
keywords = ["garmin", "fit", "running", "cycling", "power"]
exclude = ["/testdata/**", "/examples/**","/sdk/**", "/rustfmt.toml", "/Makefile"]

[dependencies]
byteorder = "1"
chrono = "0.4"
clap = "2.32"
failure = "0.1.2"

[workspace]
members = ["profile-gen"]
